# sdr-jjy

./: .gitignore  CMakeLists.txt  Makefile.sample.mk  README.md  gen_bmp_array.py  gen_font_array.py
3dmodel/: loop_antenna_200mm.stl  loop_antenna_400mm.stl
apps/jjymon_pico/: CMakeLists.txt  Makefile  Makefile.sample.mk  gen_bmp_array.py  install.sample.wsl.mk
apps/jjymon_pico/bmp/fonts/: font12.args.txt  font16.args.txt
apps/jjymon_pico/src/: buffer_view.hpp  clock_view.hpp  images.cpp  images.hpp  jjymon.cpp  jjymon.hpp  ntp_server.hpp  progress_bar.hpp  pulse_view.hpp  rader.hpp  rotary_counter.hpp  sdr_loop.cpp  ui.cpp  ui.hpp
apps/jjymon_pico/src/fonts/: font12.cpp  font12.hpp  font16.cpp  font16.hpp  font4.cpp  font4.hpp  font5.cpp  font5.hpp
apps/jjymon_rp2350/: CMakeLists.txt  Makefile.sample.mk  gen_font_array.py
apps/jjymon_rp2350/src/: buffer_view.hpp  core0.cpp  core0.hpp  core1.cpp  core1.hpp  fonts.hpp  images.cpp  images.hpp  jjymon.cpp  jjymon.hpp  lcd_demo.cpp  lcd_demo.hpp  meter.hpp  rader.hpp  sdr_loop.cpp  sdr_loop.hpp  ui.cpp  ui.hpp
apps/jjymon_rp2350/src/bmpfont/: font4.hpp  font5.hpp
apps/jjymon_rp2350/src/fonts/: font12.cpp  font12.hpp  font16.cpp  font16.hpp  font4.cpp  font4.hpp  font5.cpp  font5.hpp
lib/shapoco/: common.hpp  cyclic.hpp  fixed12.cpp  fixed12.hpp  lazy_timer.hpp  math_utils.hpp  peak_hold.hpp  ring_history.hpp  ring_scope.hpp  shapoco.hpp
lib/shapoco/graphics/: common.cpp  common.hpp  gen_font_array.py  graphics.hpp  tiny_font.hpp  tinyfont.hpp
lib/shapoco/graphics/ssd130x/: common.hpp  screen.hpp
lib/shapoco/jjy/: agc.hpp  anti_chattering.hpp  clock.hpp  common.hpp  datetime.cpp  datetime.hpp  dc_bias.hpp  hysteresis.hpp  jjy.hpp
lib/shapoco/jjy/rx/: common.hpp  decoder.hpp  diff_detector.hpp  quad_detector.hpp  radio.hpp  receiver.hpp  rf.hpp  synchronizer.hpp
lib/shapoco/pico/: atomic.hpp  dma_adc.hpp  ssd1309spi.cpp  ssd1309spi.hpp
lib/shapoco/pico/sample/: lcd_demo.cpp  lcd_demo.hpp
lib/shapoco/ssd1306/: common.hpp  screen.hpp  ssd1306.hpp  ssd130x.hpp
lib/shapoco/ssd1306/pico/: driver_base.hpp  i2c_lcd.hpp  spi_lcd.hpp
src/: atomic.hpp  bit_log_table.hpp  core0.cpp  core0.hpp  core1.cpp  dma_adc.hpp  fixed12.cpp  fixed12.hpp  jjymon.hpp  lazy_timer.hpp  meter.hpp  rader.hpp  ring_stat.hpp  ssd1309spi.hpp  ssd1390spi.cpp
src/bmpfont/: bmpfont.hpp  common.hpp  font12.cpp  font12.hpp  font16.cpp  font16.hpp  font4.cpp  font5.cpp
src/images/: images.cpp  images.hpp
src/jjy/: agc.hpp  anti_chattering.hpp  common.hpp  dc_bias.hpp  detector.hpp  hysteresis.hpp  jjy.hpp  peak_hold.hpp  phase_detector.hpp  receiver.hpp  recv_bit_sync.hpp  recv_radio.hpp  rf_receiver.hpp  utils.hpp
src/jjy/rx/: bit_sync.hpp  decoder.hpp  quad_detector.hpp  radio.hpp  receiver.hpp  synchronizer.hpp
src/misc/: lcd_demo.cpp
src/shapoco/: math_utils.hpp  peak_hold.hpp  ring_history.hpp  ring_scope.hpp
